# 27-3-simulation-of-the-company

./: CMakeLists.txt  README.md
include/: boss.h  employee.h  functions.h  manager.h  worker.h
src/: CMakeLists.txt  boss.cpp  employee.cpp  main.cpp  manager.cpp  worker.cpp
