# CMakeList.txt : CMake project for 27-3-simulation-of-the-company, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("27-3-simulation-of-the-company")

# Add source to this project's executable.
add_subdirectory(src)

# TODO: Add tests and install targets if needed.
